<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        />

    <ListPreference
        android:title="@string/pref_temp_label"
        android:key="@string/pref_temp_key"
        android:defaultValue="@string/pref_temp_default"
        android:entries="@array/pref_temp_unit_lists"
        android:entryValues="@array/pref_temp_unit_values"

        />

    <EditTextPreference
        android:title="@string/pref_period_label"
        android:key="@string/pref_period_key"
        android:defaultValue="@string/pref_period_default"
        android:inputType="text"
        android:singleLine="true"
        />

</PreferenceScreen>
